Fixed Layout Issue on Location Modal

--- a/maps/Home.module.css
+++ b/maps/Home.module.css
@@ -457,6 +457,7 @@
   left: 50%;
   transform: translate(-50%, 0%);
   z-index: 3;
+  overflow-y: auto;
   box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.5);
   width: min(33em, 80%);
 }
